--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 <img src="./imgs/pharaohfrog.png" alt="logo" class="home_hero_img">
             </div>
             <div class="right">
-                <p class="home_p">we are a company based in shikh zayed spicailezed in web devolpment and shopify
-                    devlopment</p>
+                <p class="home_p">Based in Sheikh Zayed, we build websites and Shopify stores from pure code - no templates, no limits. Just clean, custom development that fits your brand perfectly.</p>
                 <button class="main_btn">
                     <a href="./portfolio.html">portfolio</a>
                 </button>
