--- a/pharaohfrog.html
+++ b/pharaohfrog.html
@@ -25,11 +25,11 @@
         <a href="https://pharaohfrog.com/" target="_blank" rel="noopener noreferrer" class="custom_link">Visit Website</a>
       </button>
     </div>
-    <div class="slider">
+    <div class="slider" id="slider__">
       <div class="slides" id="slides">
-        <img src="https://placehold.co/800x400?text=Image+1" alt="slide 1" />
-        <img src="https://placehold.co/800x400?text=Image+2" alt="slide 2" />
-        <img src="https://placehold.co/800x400?text=Image+3" alt="slide 3" />
+        <img src="./imgs/1.png" alt="slide 1" />
+        <img src="./imgs/2.png" alt="slide 2" />
+        <img src="./imgs/3.png" alt="slide 3" />
       </div>
 
       <div class="row controls_">
@@ -38,17 +38,26 @@
       </div>
     </div>
 
+    <h2>PharouhFrog - Pet Grooming Management System</h2>
     <p class="desc">
-      pharouhfrog is a pet grooming management system. It helps to keep track of
-      grooming sessions, automatically calculate groomers’ commissions, and improve
-      customer retention. The customer only needs to enter their data once — future
-      visits will be saved for convenience.
+      <b>PharouhFrog</b> is a fully custom-coded management system built to simplify and automate pet grooming operations.
+      Designed for modern pet salons, it helps track every grooming session with ease, automatically calculates each groomer’s commission, and strengthens customer retention by keeping detailed visit histories.
     </p>
-    </div>
+    <p>Customers only need to enter their information once — future appointments are instantly recognized for a smooth, personalized experience.</p>
+    <p>With <b>PharouhFrog</b>, you can:</p>
+    <ul>
+      <li>Search clients instantly by phone and view their full session history.</li>
+      <li>Filter sessions by date for quick insights and reporting.</li>
+      <li>Monitor waiting lines across multiple branches in real time.</li>
+    </ul>
+      <p>Built from scratch with performance, simplicity, and scalability in mind — PharouhFrog turns everyday grooming chaos into organized flow.</p>
+  
+  
+  </div>
 
   </main>
 
-    <footer class="home_footer">
+    <footer class="home_footer website_footer">
         <div class="contact_us" >contact us? <a href="tel:+201094602675" >+20 109 460 2675</a></div>
         <div>
             &copy; 2025 pharouhfrog. all rights reserved.
