--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
         </a>
     </header>
     <main class="portfoilo_main">
+        <div class="contt">
         <h1>portfolio</h1>
         <div class="row websites_cont">
 
@@ -52,7 +53,9 @@
             </div>
 
 
+        </div>            
         </div>
+
     </main>
     <footer class="home_footer">
         <div class="contact_us" >contact us? <a href="tel:+201094602675" >+20 109 460 2675</a></div>
